create a jupyter notebook to preprocess wav files

--- a/Number of speakers.ipynb
+++ b/Number of speakers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aa6a6b4d",
+   "id": "5ddcc895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "906b7af4",
+   "id": "ec2ed5a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c0c89b53",
+   "id": "f5dc4b57",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3e526fc7",
+   "id": "8539fa28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "47e3b00a",
+   "id": "064004ef",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "eba2b884",
+   "id": "0ab66920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9df9e4d7",
+   "id": "01d6cb5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ab06c048",
+   "id": "85a8ea65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,9 +459,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e71e3b18",
+   "metadata": {},
+   "source": [
+    "I will filter the wav files to only use one speaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e98ae893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered[\"local_wav_path\"] = \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/wavs/\" + filtered[\"wav_path\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fd6ebd3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/wavs/common_voice_nl_17706972.wav'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample 1 path\n",
+    "filtered.iloc[0].local_wav_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e0a09712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fe569d6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create necessary dir\n",
+    "target_dir = \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/onespeakerwavs\"\n",
+    "Path(target_dir).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0824eebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered[\"target_wav_path\"] = target_dir + \"/\" + filtered[\"wav_path\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d9c26b74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/onespeakerwavs/common_voice_nl_17706972.wav'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample 1 target path\n",
+    "filtered.iloc[0].target_wav_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e5b6bea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102, 13)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I will copy over 102 wav files\n",
+    "filtered.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "eb948ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy and separate one speaker sentence recordings\n",
+    "for row_id, row in filtered.iterrows():\n",
+    "    shutil.copyfile(row.local_wav_path, row.target_wav_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "7df91b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/onespeakerwavs/common_voice_nl_17706972.wav\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls /Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nl/onespeakerwavs/common_voice_nl_17706972.wav"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593d1d56",
+   "id": "6e89dea5",
    "metadata": {},
    "outputs": [],
    "source": []
