--- a/Number of speakers.ipynb
+++ b/Number of speakers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5ddcc895",
+   "id": "8d548dc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ec2ed5a4",
+   "id": "6043335c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5dc4b57",
+   "id": "75d3d4f8",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8539fa28",
+   "id": "f22994bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "064004ef",
+   "id": "a5744ec9",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0ab66920",
+   "id": "c7b56e9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "01d6cb5b",
+   "id": "81fc85fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,16 +451,16 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "85a8ea65",
+   "id": "40302eca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered.to_csv(\"onespeaker.csv\")"
+    "filtered.to_csv(\"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/nlonespeaker.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e71e3b18",
+   "id": "bed309ca",
    "metadata": {},
    "source": [
     "I will filter the wav files to only use one speaker"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e98ae893",
+   "id": "9af1b09d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "fd6ebd3a",
+   "id": "f991d007",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e0a09712",
+   "id": "1a9215f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fe569d6e",
+   "id": "2df425e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0824eebd",
+   "id": "2f2da288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d9c26b74",
+   "id": "24c3ab60",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e5b6bea2",
+   "id": "2de19d26",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eb948ff7",
+   "id": "308b294d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7df91b8a",
+   "id": "86b4b4f3",
    "metadata": {},
    "outputs": [
     {
@@ -607,8 +607,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "02e8e097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onespeaker_metadata = filtered[[\"path\", \"sentence\"]].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ac0ba65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onespeaker_metadata[\"path\"] = onespeaker_metadata[\"path\"].apply(lambda x: x.split(\".\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8ed606ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onespeaker_metadata.to_csv(\n",
+    "    \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/onespeakernl_metadata.csv\",\n",
+    "    header=False,\n",
+    "    index=False,\n",
+    "    sep=\"|\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6e89dea5",
+   "id": "6d19a551",
    "metadata": {},
    "outputs": [],
    "source": []
