--- a/Number of speakers.ipynb
+++ b/Number of speakers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d548dc4",
+   "id": "7b5d4c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6043335c",
+   "id": "19ad5911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "75d3d4f8",
+   "id": "115351e6",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f22994bb",
+   "id": "3978b808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a5744ec9",
+   "id": "4db3b9f8",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c7b56e9b",
+   "id": "60fe0f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "81fc85fb",
+   "id": "1070abbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "40302eca",
+   "id": "80dbb96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed309ca",
+   "id": "ee453c34",
    "metadata": {},
    "source": [
     "I will filter the wav files to only use one speaker"
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9af1b09d",
+   "id": "0338f33c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f991d007",
+   "id": "0de31d84",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "1a9215f2",
+   "id": "23ccb247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2df425e9",
+   "id": "b345433f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "2f2da288",
+   "id": "461755f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "24c3ab60",
+   "id": "ad21b833",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2de19d26",
+   "id": "402b6331",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "308b294d",
+   "id": "9c71645f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "86b4b4f3",
+   "id": "ff9b4460",
    "metadata": {},
    "outputs": [
     {
@@ -607,8 +607,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "02e8e097",
+   "execution_count": 77,
+   "id": "9a6e57b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,8 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "ac0ba65c",
+   "execution_count": 78,
+   "id": "48b25536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,13 +627,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "8ed606ed",
+   "execution_count": 79,
+   "id": "2c073131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onespeaker_metadata[\"sentence_copy\"] = onespeaker_metadata[\"sentence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "0fb7260e",
    "metadata": {},
    "outputs": [],
    "source": [
     "onespeaker_metadata.to_csv(\n",
-    "    \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/onespeakernl_metadata.csv\",\n",
+    "    \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/commonspeechnlonespeaker/onespeakernl_metadata.csv\",\n",
     "    header=False,\n",
     "    index=False,\n",
     "    sep=\"|\"\n",
@@ -641,9 +651,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "531b4aac",
+   "metadata": {},
+   "source": [
+    "sanity check whether the formated folder could be loaded "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8de2f723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from TTS.tts.datasets.formatters import ljspeech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "52649cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [67]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m items \u001b[38;5;241m=\u001b[39m \u001b[43mljspeech\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/commonspeechnlonespeaker\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43monespeakernl_metadata.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[1;32m      4\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/external/ling-696g/TTS/tts/datasets/formatters.py:162\u001b[0m, in \u001b[0;36mljspeech\u001b[0;34m(root_path, meta_file, **kwargs)\u001b[0m\n\u001b[1;32m    160\u001b[0m         cols \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m|\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    161\u001b[0m         wav_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwavs\u001b[39m\u001b[38;5;124m\"\u001b[39m, cols[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.wav\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 162\u001b[0m         text \u001b[38;5;241m=\u001b[39m \u001b[43mcols\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m    163\u001b[0m         items\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m: text, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maudio_file\u001b[39m\u001b[38;5;124m\"\u001b[39m: wav_file, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspeaker_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: speaker_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot_path\u001b[39m\u001b[38;5;124m\"\u001b[39m: root_path})\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m items\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "items = ljspeech(\n",
+    "    \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/commonspeechnlonespeaker\",\n",
+    "    \"onespeakernl_metadata.csv\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "99c0acf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1fbd1b55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "common_voice_nl_17706972|Ik lust geen pannenkoeken.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [74]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m cols \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m|\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m wav_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwavs\u001b[39m\u001b[38;5;124m\"\u001b[39m, cols[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.wav\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[43mcols\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     11\u001b[0m items\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m: text, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maudio_file\u001b[39m\u001b[38;5;124m\"\u001b[39m: wav_file, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspeaker_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: speaker_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot_path\u001b[39m\u001b[38;5;124m\"\u001b[39m: root_path})\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "items = []\n",
+    "root_path = \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/commonspeechnlonespeaker\"\n",
+    "speaker_name = \"ljspeech\"\n",
+    "txt_file = \"/Users/arie/Downloads/cv-corpus-12.0-2022-12-07/commonspeechnlonespeaker/onespeakernl_metadata.csv\"\n",
+    "with open(txt_file, \"r\", encoding=\"utf-8\") as ttf:\n",
+    "    for line in ttf:\n",
+    "        print(line)\n",
+    "        cols = line.split(\"|\")\n",
+    "        wav_file = os.path.join(root_path, \"wavs\", cols[0] + \".wav\")\n",
+    "        text = cols[2]\n",
+    "        items.append({\"text\": text, \"audio_file\": wav_file, \"speaker_name\": speaker_name, \"root_path\": root_path})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d19a551",
+   "id": "2e07c0d7",
    "metadata": {},
    "outputs": [],
    "source": []
